# ncrypto

./: BUILD.bazel  CMakeLists.txt  external
.github/workflows/: bazel.yml  macos.yml  ubuntu.yml  visual-studio.yml
cmake/: ncrypto-flags.cmake
include/: dh-primes.h  ncrypto.h
src/: CMakeLists.txt  ncrypto.cpp
tests/: CMakeLists.txt  basic.cpp
